--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,10 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+remappings = [
+    "@uniswap/v3-core/=./lib/v3-core",
+    "@openzeppelin/=./lib/openzeppelin-contracts"
+]
 
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+[rpc_endpoints]
+mainnet = "${MAINNET_RPC_URL}"
